fix: made sure that content is lined up in the middle

--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
           
           <br>
           <br>
-          <div class="homepage-content has-text-info enable-line-break">
-            Hi there 👋🏻
+          <div class="homepage-content has-text-info enable-line-break">Hi there 👋🏻
 I'm Niko and starting to build in public!
-
-          </div>
+</div>
         </div>
       </div>
     </section>
