feat: add navbar header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body><div id="content">
   <main aria-role="main">
-    <section class="hero is-fullheight has-background-primary">
+    <section class="hero is-fullheight is-primary">
+      <div class="hero-head">
+        <header class="navbar">
+          <div class="container">
+            <div class="navbar-brand">
+              <a class="navbar-item has-text-weight-bold is-size-5" href="https://www.nikookio.com">
+                NikoOkio.com
+              </a>
+            </div>
+          </div>
+        </header> 
+      </div>
       <div class="hero-body has-text-centered">
         <div class="container">
           <div class="columns">
@@ -16,7 +27,7 @@
             </div>
             <div class="column">
               <figure class="image is-128x128 is-inline-block">
-                  <img class="is-rounded has-pink-info" src='avatar.png'>
+                  <img class="is-rounded has-link-border" src='avatar.png'>
               </figure>
               <br>
               <span class="is-size-1 has-text-light has-text-weight-bold">NIKO OKIO</span>
@@ -34,6 +45,7 @@ In 2022 I will release 2+ Products and hopefully gain some paid customers and at
             </div>
             <div class="column">
             </div>
+          </div>
         </div>
       </div>
     </section>
