--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ if (!doNotTrack) {
     <div class="hidden w-full md:block md:w-auto" id="navbar-okio">
       <ul class="flex flex-col p-2 mt-2 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0">
         <li>
-          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-slate-700 md:bg-transparent md:p-0" aria-current="page">Home</a>
+          <a href="https://www.nikookio.com/" class="block py-2 pr-4 pl-3 text-white bg-slate-700 md:bg-transparent md:p-0" aria-current="page">Home</a>
         </li>
         <li>
           <a href="/categories/" class="block py-2 pr-4 pl-3 text-slate-400 hover:bg-slate-700 md:hover:bg-transparent md:border-0 md:hover:text-slate-100 md:p-0">Categories</a>
@@ -67,6 +67,10 @@ you too.</p>
       <div class="font-mono">
         <p class="font-extrabold text-xl">Blog Posts</p>
         <ul class="list-disc list-inside font-medium space-y-2">
+          <li><a href="https://www.nikookio.com/posts/how-to-build-a-saas/" class="hover:underline">How to build a SaaS application</a>
+            <p class="text-xs font-extralight italic ml-5">On September 13, 2022</p>
+          </li>
+          
           <li><a href="https://www.nikookio.com/posts/digital-ocean-hosting/" class="hover:underline">Why Digital Ocean is a great hosting platform for your SaaS product</a>
             <p class="text-xs font-extralight italic ml-5">On September 12, 2022</p>
           </li>
