--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <script type="text/javascript" src="/js/navbar.js"></script>
   <meta http-equiv="content-language" content="en-us"><meta name='description' content=''><title>Niko Okio</title>
+  
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSWRT3WTZ"></script>
 <script>
 var doNotTrack = false;
@@ -18,8 +19,9 @@ if (!doNotTrack) {
 	gtag('config', 'G-DPSWRT3WTZ', { 'anonymize_ip': true });
 }
 </script>
+
 </head>
-<body><div class="items-center justify-center min-h-screen bg-gradient-to-br from-slate-700 to-slate-900 text-slate-100"><nav class="sticky top-0 px-2 sm:px-4 py-2.5 bg-slate-900">
+<body><div class="items-center justily-center min-h-screen bg-gradient-to-br from-slate-700 to-slate-900 text-slate-100"><nav class="sticky top-0 px-2 sm:px-4 py-2.5 bg-slate-900">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="https://www.nikookio.com/" class="flex items-center">
       <span class="self-center text-xl font-semibold whitespace-nowrap text-slate-100">Niko Okio</span>
@@ -74,11 +76,12 @@ if (!doNotTrack) {
         <span class="text-xl italic bg-slate-900 px-2 p-1">Indie Hacker &amp; Software Dev</span>
         <span class="absolute w-full z-0 bg-slate-900"></span>
         
-        <section class="pt-4"><p>Hi there 👋🏻</p>
+        <section class="pt-4 content"><p>Hi there 👋🏻</p>
 <p>On my blog, I will take you on a journey, from employed to entrepreneur. My
 goal is to be as open as possible and share everything that I do with you.
 Hopefully, I will figure some stuff out that works well and provides value to
 you too.</p>
+<p>In October 2022 I launched my first page, <a href="https://tailwind.fyi">tailwind.fyi</a></p>
 </section>
       </div>
       <div class="font-mono">
